syntax = "proto3";
service Idol {
  rpc GetIdol (GetIdolMessage) returns (IdolResponse) {}
}
message GetIdolMessage {
  string target_idol = 1;
}
message IdolResponse {
  string name = 1;
  string nick_name = 2;
  int32 height = 3;
}
